# AMR

./: .gitignore  Docu.code-workspace  README.md  coco-train.yaml  main.py  package.xml  requirements.txt  requirements_nocuda.txt  setup.py  train.py
datasets/labeld2/labels/: 00c6d40c-IMG_20250527_161000.txt  0229ed90-IMG_20250527_160803.txt  0554f487-IMG_20250527_160501.txt  0ab03b5c-IMG_20250527_160804.txt  113c881e-IMG_20250527_160954.txt  11c9d4d0-IMG_20250527_160722.txt  18c6ad2f-IMG_20250527_160702.txt  2d8c11e7-IMG_20250527_160953.txt  2e3abb11-IMG_20250527_160650.txt  2f2989ef-IMG_20250527_161034.txt  395bf7df-IMG_20250527_160649.txt  4fb551dc-IMG_20250527_161044.txt  51fc9db2-IMG_20250527_161002.txt  53a0f010-IMG_20250527_161008.txt  5949791b-IMG_20250527_160657.txt  5a565eef-IMG_20250527_160948.txt  5ec5bbf4-IMG_20250527_160620.txt  625033eb-IMG_20250527_161026.txt  67aad1a4-IMG_20250527_161027.txt  6da70bc8-IMG_20250527_161044.txt  70041fda-IMG_20250527_160952.txt  72fcc9d2-IMG_20250527_160728.txt  739f0c58-IMG_20250527_161051.txt  79121af2-IMG_20250527_161028.txt  7a7a2d18-IMG_20250527_160546.txt  7d73326a-IMG_20250527_160458.txt  (+23 more)
labeld1/: notes.json
src/: 0_titelseite.tex  1_einleitung.tex  2_konzept.tex  3_grundlagen.tex  4_projektvorbereitung.tex  5_training.tex  6_implementierung.tex  7_zusammenfassung.tex  abstract.tex  literatur.bib  main.tex
turtlebot3_camera_stream/: inference.py  setup.cfg  setup.py
turtlebot3_camera_stream/script/: camera_stream.py
turtlebot3_camera_stream/turtlebot3_camera_stream/: inference.py
(+228 files in other folders)
