<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_camera_stream</name>
  <version>1.0.0</version>
  <description>
    Reads the /image_raw/compressed topic and controls the turtlebot depending on the scanned images.
  </description>
  <maintainer email="ann-kathrin.stracke@stud.hs-mannheim.de">Anni</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>torchvision</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
